# sati

./: .gitignore  Anchor.toml  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  package.json  pnpm-lock.yaml
docs/: ARCHITECTURE.md  COMPARISON_ERC8004.md  SPECIFICATION.md
examples/basic-agent-registration/: README.md
examples/cross-chain-identity/: README.md
programs/identity-registry/: Cargo.toml
programs/identity-registry/src/: errors.rs  instructions.rs  lib.rs  state.rs
programs/mandate-registry/: Cargo.toml
programs/mandate-registry/src/: errors.rs  instructions.rs  lib.rs  state.rs
programs/reputation-registry/: Cargo.toml
programs/reputation-registry/src/: errors.rs  instructions.rs  lib.rs  state.rs
scripts/: demo.js
sdk/: package.json
sdk/src/: helpers.ts  identity.ts  index.ts  mandate.ts  reputation.ts
sdk/src/examples/: ap2-integration.ts  create-delegation.ts  register-agent.ts
sdk/src/sas/: delegation.ts  validation.ts
tests/: identity_registry.test.ts  mandate_registry.test.ts  reputation_registry.test.ts
