[package]
name = "mandate-registry"
version = "0.1.0"
description = "SATI Mandate Registry - AP2 mandate lifecycle management"
edition = "2021"
license = "CC0-1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "mandate_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
solana-program = "2.1"
solana-security-txt = "1.1.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
